Resize handler updates. - Remove some comments where the code is self-explanatory. - move code into functions for referencing named functions - Add viewport meta for preventing browser scaling

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ body {
 .modal {
 	position: absolute;
 	width: 50%;
+	max-width: 800px;
 	height: auto;
 	border: solid thin #eee;
 	border-radius: 10px;
